--- a/index.html
+++ b/index.html
@@ -11,87 +11,79 @@
 </head>
 <body>
     <!-- header content -->
-    <header class="flex items-center justify-between bg-gray-200 p-[8px]">
+    <header class="flex items-center justify-between bg-gradient-to-r from-blue-400 via-purple-400 to-pink-400 p-4 shadow-lg rounded-b-2xl">
         <!-- logo icon -->
-        <div class="h-16 w-16 bg-[url(https://picsum.photos/200)] rounded-full bg-cover"></div>
-        <!-- <div class="logo-icon">
-            <img src="images/logo.png" alt="Logo" class="w-16 h-16">
-        </div> -->
-        <nav class="flex">
-        <!-- <nav class="flex gap-4 items-center justify-center"> -->
-            <a href="#home-page" class="border rounded-[4px] py-[4px] py-[8px] test-decoration-none">Home</a>
-            <a href="#our-profile" class="border rounded-[4px] py-[4px] py-[8px] test-decoration-none">Our Profile</a>
-            <a href="#message-us" class="border rounded-[4px] py-[4px] py-[8px] test-decoration-none">Message Us</a>
+        <div class="h-16 w-16 bg-[url('https://picsum.photos/200')] rounded-full bg-cover border-4 border-white shadow-md"></div>
+        <nav class="flex gap-6 items-center">
+            <a href="#home-page" class="px-5 py-2 rounded-lg bg-white/80 text-gray-800 font-semibold shadow hover:bg-blue-600 hover:text-white transition duration-200 ease-in-out">Home</a>
+            <a href="#our-profile" class="px-5 py-2 rounded-lg bg-white/80 text-gray-800 font-semibold shadow hover:bg-purple-600 hover:text-white transition duration-200 ease-in-out">Our Profile</a>
+            <a href="#message-us" class="px-5 py-2 rounded-lg bg-white/80 text-gray-800 font-semibold shadow hover:bg-pink-600 hover:text-white transition duration-200 ease-in-out">Message Us</a>
         </nav>
     </header>
 
     <!-- main content -->
-    <main>
+    <main class="max-w-4xl mx-auto mt-8 px-4">
         <!-- Home content -->
-        <section id="home-page">
+        <section id="home-page" class="mb-12">
             <header>
-            <h1 class="text-2xl font-bold text-center my-4">Welcome <span id="welcome-visitor">[Visitor Name]</span> to Our Website</h1>
+                <h1 class="text-4xl font-extrabold text-center my-6 bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500 bg-clip-text text-transparent drop-shadow-lg">
+                    Welcome <span id="welcome-visitor" class="underline decoration-pink-400">[Visitor Name]</span> to Our Website
+                </h1>
             </header>
-            <div>
-                <p class="text-center">This is the home page content. Here you can find various information about our services. <br /> Explore our services and get to know us better.</p>
-            
-                <div class="banner-img"></div>
+            <div class="flex flex-col items-center">
+                <p class="text-lg text-center mb-6 text-gray-700">
+                    This is the home page content. Here you can find various information about our services.<br>
+                    Explore our services and get to know us better.
+                </p>
+                <div class="banner-img w-full h-56 rounded-2xl shadow-lg bg-[url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80')] bg-cover bg-center mb-4"></div>
             </div>
         </section>
-        <hr class="my-4 border-gray-300">
+        <hr class="my-8 border-gray-300">
 
         <!-- Our Profile -->
-        <section id="our-profile">
+        <section id="our-profile" class="mb-12">
             <header>
-            <h2 class="text-xl font-semibold text-center my-4">Our Profile</h2>
+                <h2 class="text-2xl font-bold text-center my-6 text-purple-700">Our Profile</h2>
             </header>
-            <div>
-                <article class="text-center">
-                    <p class="text-center">We are a team of dedicated professionals commited to providing the best services possible. Our profile includes our mission, vision, and values</p>
-                    <p class="text-center">Our mission is to deliver high-quality services that exceed our clients' expectations. We believe in innovation, integrity, and excellence.</p>
-                    <p class="text-center">Our vision is to be a leader in our industry, setting standards for quality and customer satisfaction. We strive to create a positive impact in the communities we serve.</p>
-                    <p class="text-center">Our values include respect, teamwork, and continuous improvement. We are committed to fostering a culture of collaboration and growth.</p>
-
-            </article>
+            <div class="bg-white/70 rounded-xl shadow-md p-6">
+                <article class="text-center text-gray-700 space-y-4">
+                    <p>We are a team of dedicated professionals committed to providing the best services possible. Our profile includes our mission, vision, and values.</p>
+                    <p>Our mission is to deliver high-quality services that exceed our clients' expectations. We believe in innovation, integrity, and excellence.</p>
+                    <p>Our vision is to be a leader in our industry, setting standards for quality and customer satisfaction. We strive to create a positive impact in the communities we serve.</p>
+                    <p>Our values include respect, teamwork, and continuous improvement. We are committed to fostering a culture of collaboration and growth.</p>
+                </article>
             </div>
         </section>
-        <hr class="my-4 border-gray-300">
+        <hr class="my-8 border-gray-300">
 
         <!-- Message Us -->
-        <section id="message-us">
+        <section id="message-us" class="mb-12">
             <header>
-                    <h2 class="text-xl font-semibold text-center my-4">Message Us</h2>
-                </header>
-                <!-- <div class="flex justify-around items-center"> -->
-            <form action="">
-                <p class="text-center mb-4">If you have any questions or feedback, please fill out the form below. We would love to hear from you!</p>
-                <div class="flex flex-col items-center">
-                    <label for="input-name" class="mb-2">Name:</label>
-                    <input type="text" id="input-name" name="name" class="border rounded p-2 mb-4 w-1/2" required>
+                <h2 class="text-2xl font-bold text-center my-6 text-pink-700">Message Us</h2>
+            </header>
+            <form class="bg-white/70 rounded-xl shadow-md p-6 max-w-lg mx-auto">
+                <p class="text-center mb-6 text-gray-700">If you have any questions or feedback, please fill out the form below. We would love to hear from you!</p>
+                <div class="flex flex-col gap-4">
+                    <label for="input-name" class="font-semibold text-gray-800">Name:</label>
+                    <input type="text" id="input-name" name="name" class="border-2 border-blue-200 rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-blue-400 transition" required>
 
-                    <!-- <label for="email" class="mb-2">Email:</label>
-                    <input type="email" id="email" name="email" class="border rounded p-2 mb-4 w-1/2"> -->
+                    <label for="message" class="font-semibold text-gray-800">Message:</label>
+                    <textarea id="message" name="message" rows="4" class="border-2 border-pink-200 rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-pink-400 transition" required></textarea>
 
-                    <label for="message" class="mb-2">Message:</label>
-                    <textarea id="message" name="message" rows="4" class="border rounded p-2 mb-4 w-1/2" required></textarea>
-
-                    <button type="button" class="bg-blue-500 text-white rounded py-2 px-4 hover:bg-blue-600 transition duration-300" onclick="validateForm()">Send Message</button>
+                    <button type="button" class="bg-gradient-to-r from-blue-500 to-pink-500 text-white font-bold rounded-lg py-3 px-6 mt-2 shadow hover:scale-105 hover:from-purple-500 hover:to-pink-600 transition duration-300" onclick="validateForm()">Send Message</button>
                 </div>
-
             </form>
-                            <div id="message-output" class="text-center mt-4">Result: </div>
-            <!-- </div> -->
-            <header></header>
-            <div></div>
+            <div id="message-output" class="text-center mt-6 text-lg font-semibold text-green-600">Result: </div>
         </section>
     </main>
     <!-- footer content -->
-    <footer>
-        <p class="text-center text-gray-500 mt-4">© 2025 Tommy Poernomo Company. All rights reserved.</p>
-        <p class="text-center text-gray-500">Follow us on social media:
-            <a href="#" class="text-blue-500 hover:underline">Facebook</a>,
-            <a href="#" class="text-blue-500 hover:underline">Twitter</a>,
-            <a href="#" class="text-blue-500 hover:underline">Instagram</a> 
+    <footer class="bg-gradient-to-r from-blue-100 via-purple-100 to-pink-100 py-6 rounded-t-2xl shadow-inner">
+        <p class="text-center text-gray-500 mb-2">© 2025 Tommy Poernomo Company. All rights reserved.</p>
+        <p class="text-center text-gray-500">
+            Follow us on social media:
+            <a href="#" class="text-blue-500 hover:underline hover:text-blue-700 transition">Facebook</a>,
+            <a href="#" class="text-blue-500 hover:underline hover:text-blue-700 transition">Twitter</a>,
+            <a href="#" class="text-blue-500 hover:underline hover:text-blue-700 transition">Instagram</a>
         </p>
     </footer>
 
